--- a/stage_1_report.ipynb
+++ b/stage_1_report.ipynb
@@ -298,8 +298,8 @@
     "データの平均的な値\n",
     "<br>\n",
     "$\\begin{align}\n",
-    "E(f) &= \\sum_{k = 1}^{n} P(X = x_k) f(X = x_k) & (離散値の場合) \\\\\n",
-    "    E(f) &= \\int P(X = x) f(X = x) dx & (連続値の場合)\n",
+    "E(f) &= \\sum_{k = 1}^{n} P(X = x_k) f(X = x_k) & (\\text{離散値の場合}) \\\\\n",
+    "    E(f) &= \\int P(X = x) f(X = x) dx & (\\text{連続値の場合})\n",
     "\\end{align}$\n",
     "- 分散\n",
     "<br>\n",
