--- a/stage_1_report.ipynb
+++ b/stage_1_report.ipynb
@@ -55,18 +55,12 @@
     "<br>\n",
     "複数の数字（矢印）で表されて、特定の演算が可能\n",
     "<br>\n",
-    "例：$\\left( \\begin{array}{c}\n",
-    "0 \\\\\n",
-    "    1\n",
-    "        \\end{array} \\right)$\n",
+    "例：$\\left( \\begin{array}{c} 0 \\\\ 1 \\end{array} \\right)$\n",
     "- 行列\n",
     "<br>\n",
     "複数のベクトルで表されて、特定の演算が可能\n",
     "<br>\n",
-    "例：$\\left( \\begin{array}{cc}\n",
-    "0 & 2 \\\\\n",
-    "    1 & 3\n",
-    "        \\end{array} \\right)$"
+    "例：$\\left( \\begin{array}{cc} 0 & 2 \\\\ 1 & 3 \\end{array} \\right)$"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -110,14 +104,7 @@
     "例：$\\left( \\begin{array}{cc}\n",
     "1 & 0 \\\\\n",
     "    0 & 1\n",
-    "    \\end{array} \\right)\n",
-    "    ,\n",
-    "    \\left( \\begin{array}{ccc}\n",
-    "    1 & 0 & 0 \\\\\n",
-    "        0 & 1 & 0 \\\\\n",
-    "            0 & 0 & 1\n",
-    "            \\end{array} \\right)\n",
-    "            $\n",
+    "    \\end{array} \\right)$\n",
     "- 逆行列 $A^{-1}$\n",
     "<br>\n",
     "ある行列に対して、かけると単位行列になる行列（スカラーの逆数に相当）\n",
