--- a/stage_1_report.ipynb
+++ b/stage_1_report.ipynb
@@ -71,7 +71,7 @@
     "以下の2つの式は等価\n",
     "<br>\n",
     "連立方程式を行列の変換（逆行列をかけること）で解くことができる\n",
-    "- $\\left\\{ \\begin{align} x_1 + 2x_2 &= 3 \\\\ 2x_1 + 5x_2 &= 5 \\end{align} \\right.$\n",
+    "- $\\left\\{ \\begin{align} x_1 + 2x_2 &= 3 \\nonumber \\\\ 2x_1 + 5x_2 &= 5 \\end{align} \\right.$\n",
     "- $\\left( \\begin{array}{cc} 1 & 2 \\\\ 2 & 5 \\end{array} \\right) \\left( \\begin{array}{c} x_1 \\\\ x_2 \\end{array} \\right) = \\left( \\begin{array}{c} 3 \\\\ 5 \\end{array} \\right)$"
    ],
    "cell_type": "markdown",
