--- a/stage_1_report.ipynb
+++ b/stage_1_report.ipynb
@@ -165,16 +165,14 @@
     "& & \\ddots\n",
     "\\end{array} \\right)$\n",
     "<br>\n",
-    "$V$は対応する固有ベクトルを並べた行列$V = \\left( \\begin{array}{ccc}\n",
-    "\\mathbb{v_1} & \\mathbb{v_2} & \\cdots\n",
-    "\\end{array} \\right)$\n",
+    "$V$は対応する固有ベクトルを並べた行列$V = \\left( \\begin{array}{ccc} \\mathbb{v_1} & \\mathbb{v_2} & \\cdots \\end{array} \\right)$\n",
     "- 特異値分解 $M = USV^T$\n",
     "<br>\n",
     "$S$は特異値を並べた行列$S = \\left( \\begin{array}{ccc}\n",
     "\\sigma_1 & & \\\\\n",
-    "    & \\sigma_2 & \\\\\n",
-    "        & & \\ddots\n",
-    "        \\end{array} \\right)$\n",
+    "& \\sigma_2 & \\\\\n",
+    "& & \\ddots\n",
+    "\\end{array} \\right)$\n",
     "<br>\n",
     "$U, V$ は対応する左特異ベクトル、右特異ベクトルを並べた行列"
    ],
