--- a/stage_1_report.ipynb
+++ b/stage_1_report.ipynb
@@ -212,7 +212,7 @@
     "### 確率\n",
     "- 事象Aが起こる確率\n",
     "<br>\n",
-    "$P(A)=\\frac{事象Aが起こる数}{すべての事象の数}$\n",
+    "$P(A)=\\frac{\\text{the number of events A}}{\\text{the number of all events}}$\n",
     "- 事象Aが起こらない確率\n",
     "<br>\n",
     "$P(\\overline{A})=1-P(A)$\n",
@@ -266,24 +266,24 @@
     "データの平均的な値\n",
     "<br>\n",
     "$\\begin{align}\n",
-    "E(f) &= \\sum_{k = 1}^{n} P(X = x_k) f(X = x_k) & (\\text{離散値の場合}) \\\\\n",
-    "    E(f) &= \\int P(X = x) f(X = x) dx & (\\text{連続値の場合})\n",
+    "E(f) &= \\sum_{k = 1}^{n} P(X = x_k) f(X = x_k) & (\\text{if discrete}) \\nonumber \\\\\n",
+    "    E(f) &= \\int P(X = x) f(X = x) dx & (\\text{if continuous}) \\nonumber\n",
     "\\end{align}$\n",
     "- 分散\n",
     "<br>\n",
     "データの散らばり具合\n",
     "<br>\n",
     "$\\begin{align}\n",
-    "\\mathrm{Var}(f) &= E\\left(\\left(f_{(X = x)} - E_{(f)}\\right)^2\\right) \\\\\n",
-    "    &= E\\left(f_{X = x}^2\\right) - \\left(E_{(f)}\\right)^2\n",
+    "\\mathrm{Var}(f) &= E\\left(\\left(f_{(X = x)} - E_{(f)}\\right)^2\\right) \\nonumber \\\\\n",
+    "    &= E\\left(f_{X = x}^2\\right) - \\left(E_{(f)}\\right)^2 \\nonumber\n",
     "\\end{align}$\n",
     "- 共分散\n",
     "<br>\n",
     "2つのデータ系列の傾向の違い\n",
     "<br>\n",
     "$\\begin{align}\n",
-    "\\mathrm{Cov}(f, g) &= E\\left(\\left(f_{(X = x)} - E(f)\\right) \\left(g_{(Y = y)} - E(g)\\right)\\right) \\\\\n",
-    "    &= E(fg) - E(f) E(g)\n",
+    "\\mathrm{Cov}(f, g) &= E\\left(\\left(f_{(X = x)} - E(f)\\right) \\left(g_{(Y = y)} - E(g)\\right)\\right) \\nonumber \\\\\n",
+    "    &= E(fg) - E(f) E(g) \\nonumber\n",
     "\\end{align}$\n",
     "- 標準偏差\n",
     "<br>\n",
@@ -370,8 +370,8 @@
     "分布に偏りがないほど値が大きい\n",
     "<br>\n",
     "$\\begin{align}\n",
-    "H(x) &= E(I(x)) \\\\\n",
-    "    &= -\\sum \\left(P(x) \\log P(x)\\right)\n",
+    "H(x) &= E(I(x)) \\nonumber \\\\\n",
+    "    &= -\\sum \\left(P(x) \\log P(x)\\right) \\nonumber\n",
     "    \\end{align}$\n",
     "- カルバック・ライブラーダイバージェンス\n",
     "<br>\n",
